# copywriting_env

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
openenv/core/env_server/: mcp_types.py  serialization.py  web_interface.py
server/: __init__.py  app.py  client.py  environment.py  graders.py  models.py  tasks.py
